refactorizacion de codigo e inicio de community
