# backend/docs/swagger.yaml
@@ -200,6 +200,62 @@ components:
           format: date-time
           readOnly: true
           example: '2026-04-23T12:00:00Z'
+    Community:
+      type: object
+      required:
+        - name
+        - owner_id
+        - is_private
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: 'ID autoincremental único de la comunidad'
+          readOnly: true
+        name:
+          type: string
+          maxLength: 255
+          description: 'Nombre único de la comunidad'
+        slug:
+          type: string
+          maxLength: 255
+          description: 'URL amigable única basada en el nombre'
+        description:
+          type: string
+          nullable: true
+          description: 'Descripción detallada del propósito de la comunidad'
+        image_url:
+          type: string
+          maxLength: 500
+          nullable: true
+          format: uri
+          description: 'URL de la imagen de perfil o logo'
+        owner_id:
+          type: integer
+          description: 'ID del usuario creador (Relación con tabla users)'
+        is_private:
+          type: boolean
+          default: false
+          description: 'Define si la comunidad es privada o pública'
+        createdAt:
+          type: string
+          format: date-time
+          readOnly: true
+        updatedAt:
+          type: string
+          format: date-time
+          readOnly: true
+      example:
+        id: 1
+        name: 'Desarrolladores React'
+        slug: 'desarrolladores-react'
+        description: 'Espacio para compartir conocimiento sobre React y Next.js'
+        image_url: 'https://ejemplo.com/icon.png'
+        owner_id: 42
+        is_private: false
+        createdAt: '2024-03-20T15:30:00Z'
+        updatedAt: '2024-03-20T15:30:00Z'
+
 paths:
   /auth/:
     post:
@@ -612,8 +668,6 @@ paths:
     get:
       summary: Obtener todas las categorías del usuario autenticado
       tags: [Categories]
-      security:
-        - bearerAuth: []
       responses:
         200:
           description: Lista de categorías
@@ -631,3 +685,11 @@ paths:
           description: No se encontraron categorías para este usuario
         500:
           description: Error interno del servidor
+
+  /communities:
+    get:
+      summary: Obtener todas las comunidades
+      tags: [Community]
+      responses:
+        200:
+          description: Comunidades obtenidas
